Fri Aug 26 09:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp
        * TAO_IDL/be/be_visitor_exception/exception_ch.cpp
        * TAO_IDL/be/be_visitor_exception/exception_cs.cpp
        * TAO_IDL/be/be_visitor_exception/exception_ctor.cpp
        * TAO_IDL/be/be_visitor_operation/ami_exception_holder_operation_cs.cpp
        * TAO_IDL/be/be_visitor_operation/exceptlist_cs.cpp
        * TAO_IDL/be/be_visitor_operation/exceptlist_ss.cpp
        * TAO_IDL/include/utl_err.h
        * TAO_IDL/util/utl_err.cpp
        * docs/compiler.html
          When the -St option is used to suppress typecodes, we now
          also suppress the type codes of user exceptions. There is no
          requirement for this from the orb, the only functionality the
          user looses is the ability to retrieve which exceptions an
          operation throws using interceptors.

        * tao/Adapter_Factory.cpp
        * tao/BiDir_Adapter.cpp
        * tao/CORBALOC_Parser.cpp
        * tao/Cleanup_Func_Registry.cpp
        * tao/DLL_Parser.cpp
        * tao/Endpoint_Selector_Factory.cpp
        * tao/Environment.cpp
        * tao/Exclusive_TMS.cpp
        * tao/FILE_Parser.cpp
        * tao/IFR_Client_Adapter.cpp
        * tao/IOR_Parser.cpp
        * tao/LF_Follower.cpp
        * tao/Leader_Follower.cpp
        * tao/MCAST_Parser.cpp
        * tao/Muxed_TMS.cpp
        * tao/ORB.cpp
        * tao/ORB_Core.cpp
        * tao/ORB_Table.cpp
        * tao/Resource_Factory.cpp
        * tao/Stub.cpp
        * tao/Stub_Factory.cpp
        * tao/TSS_Resources.cpp
        * tao/Transport_Cache_Manager.cpp
        * tao/default_resource.cpp
        * tao/Codeset/Codeset_Manager_i.cpp
        * tao/Codeset/UTF16_BOM_Factory.cpp
        * tao/Codeset/UTF8_Latin1_Factory.cpp
        * tao/DynamicAny/DynAnyFactory.cpp
        * tao/DynamicAny/DynUnion_i.cpp
        * tao/DynamicInterface/ExceptionList.cpp
        * tao/DynamicInterface/Request.cpp